--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Tip Calculator</string>
+    <string name="enter_amount">Enter amount...</string>
+    <string name="tip_text">Tip</string>
+    <string name="total_text">Total</string>
+    <string name="tip_percentage">0%</string>
 </resources>
